// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoStatusIcon renders successfully 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <TodoStatusIcon
    todo={
      Object {
        "id": "todo-1",
        "status": 1,
        "text": "test task",
      }
    }
  >
    <span
      className="todo-item-option"
      onClick={[Function]}
    >
      ⬜
    </span>
  </TodoStatusIcon>
</Provider>
`;

exports[`TodoStatusIcon renders successfully 2`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <TodoStatusIcon
    todo={
      Object {
        "id": "todo-1",
        "status": 2,
        "text": "test task",
      }
    }
  >
    <span
      className="todo-item-option"
      onClick={[Function]}
    >
      ✅
    </span>
  </TodoStatusIcon>
</Provider>
`;
